--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "firebase": "8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
