--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "sass": "^1.49.8",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
